# golars

./: .gitignore  .goreleaser.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SKILLS.md  go.mod  go.sum  go.work  go.work.sum  golars.go  golars_test.go  install-zed-extension.sh  selectexpr_test.go  staticcheck.conf
bench/polars-rust/: Cargo.toml
bench/polars-rust/src/: main.rs
browse/: browse.go  browse_test.go  export.go  format.go  keys.go  view.go
compute/: add_nt_amd64.go  add_nt_amd64.s  add_nt_f64_amd64.s  add_nt_fallback.go  add_nt_workers_amd64.go  add_nt_workers_arm64.go  add_nt_workers_fallback.go  agg.go  agg_parity_test.go  agg_test.go  arith.go  arith_test.go  blend_avx2_amd64.go  blend_avx2_amd64.s  blend_lut_amd64.s  bufpool.go  cast.go  cast_arm64.go  cast_arm64.s  cast_avx2_test.go  cast_fallback.go  cast_i64f64_amd64.s  cast_nt_amd64.s  cast_parity_test.go  cast_test.go  common.go  compare.go  compare_lit_test.go  compare_parity_test.go  compare_test.go  edge_test.go  fillnull_avx2_amd64.go  fillnull_avx2_amd64.s  fillnull_avx2_bench_test.go  fillnull_avx2_test.go  fillnull_neon_arm64.go  fillnull_neon_arm64.s  fillnull_register_amd64.go  fillnull_register_test.go  filter.go  (+42 more)
dataframe/: arrow_interop.go  arrow_interop_test.go  concat.go  concat_parity_test.go  concat_test.go  dataframe.go  dataframe_test.go  describe.go  describe_parity_test.go  describe_test.go  equals_parity_test.go  explode.go  explode_test.go  filter.go  filter_test.go  format.go  frame_aggs.go  from.go  groupby.go  groupby_bench_test.go  join.go  (+34 more)
(+385 files in other folders)
