[package]
name = "polars-rust-bench"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "polars-rust-bench"
path = "src/main.rs"

[dependencies]
polars = { version = "0.53", features = [
    "lazy",
    "rolling_window",
    "fmt",
    "zip_with",
    "is_in",
    "strings",
    "temporal",
    "timezones",
    "cum_agg",
    "dtype-full",
] }
polars-core = "0.53"
rand = "0.8"
rand_pcg = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
